@@ -1,3 +1,7 @@
+2007-09-02  Ludovic Courtès  <ludo@gnu.org>
+
+	* NEWS: Mention memory leak fix in `make-socket-address'.
+
 2007-09-01  Ludovic Courtès  <ludo@gnu.org>
 
 	* NEWS: Mention duplicate binding warnings to stderr.
